# templates-functors

counter-numbers/: CMakeLists.txt  counter_numbers.cpp
squaring/: CMakeLists.txt  squaring.cpp
table/: main.cpp  table.cpp  table.h
